<resources>
    <string name="app_name">AMyMoney</string>
    <string name="empty_app_state">No accounts found.\nPlease load a KMyMoney data file or create new account</string>
    <string name="home">Home</string>
    <string name="institutions">Institutions</string>
    <string name="accounts">Accounts</string>
    <string name="categories">Categories</string>
    <string name="tags">Tags</string>
    <string name="payees">Payees</string>
    <string name="ledgers">Ledgers</string>
    <string name="overview">Overview</string>
    <string name="assetAccounts">Asset Accounts</string>
    <string name="liabilityAccounts">Liability Accounts</string>
    <string name="currentBalance">Current Balance</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
