<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            />
        <item
            android:id="@+id/nav_institutions"
            android:title="@string/institutions"
            />
        <item
            android:id="@+id/nav_accounts"
            android:title="@string/accounts" />
        <item
            android:id="@+id/nav_categories"
            android:title="@string/categories" />
        <item
            android:id="@+id/nav_tags"
            android:title="@string/tags" />
        <item
            android:id="@+id/nav_payees"
            android:title="@string/payees" />
        <item
            android:id="@+id/nav_transactions"
            android:title="@string/ledgers" />
    </group>
</menu>
