<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="eu.vmladenov.amymoney.ui.views.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/home_fragment"
        >
        <action
            android:id="@+id/action_nav_home_to_nav_institutions"
            app:destination="@id/nav_institutions" />
        <action
            android:id="@+id/action_nav_home_to_nav_accounts"
            app:destination="@id/nav_accounts" />
        <action
            android:id="@+id/action_nav_home_to_nav_tags"
            app:destination="@id/nav_tags" />
        <action
            android:id="@+id/action_nav_home_to_nav_payees"
            app:destination="@id/nav_payees" />
        <action
            android:id="@+id/action_nav_home_to_nav_transactions"
            app:destination="@id/nav_transactions" />
        <action
            android:id="@+id/action_nav_home_to_nav_categories"
            app:destination="@id/nav_categories" />
    </fragment>

    <fragment
        android:id="@+id/nav_institutions"
        android:name="eu.vmladenov.amymoney.ui.views.institutions.InstitutionsFragment"
        android:label="@string/institutions"
        tools:layout="@layout/institutions_fragment"
        >
        <action
            android:id="@+id/action_nav_institutions_to_accounts"
            app:destination="@id/nav_accounts" />
    </fragment>
    <fragment
        android:id="@+id/nav_accounts"
        android:name="eu.vmladenov.amymoney.ui.views.accounts.AccountsFragment"
        android:label="@string/accounts"
        tools:layout="@layout/accounts_fragment"
        >
        <argument
            android:name="INSTITUTION_ID"
            app:argType="string"
            android:defaultValue="" />
        <action
            android:id="@+id/action_nav_accounts_to_transactions"
            app:destination="@id/nav_transactions" />
    </fragment>
    <fragment
        android:id="@+id/nav_categories"
        android:name="eu.vmladenov.amymoney.ui.views.categories.CategoriesFragment"
        android:label="@string/categories"
        tools:layout="@layout/fragment_categories">
    </fragment>
    <fragment
        android:id="@+id/nav_tags"
        android:name="eu.vmladenov.amymoney.ui.views.tags.TagsFragment"
        android:label="@string/tags"
        tools:layout="@layout/fragment_tags">
    </fragment>
    <fragment
        android:id="@+id/nav_payees"
        android:name="eu.vmladenov.amymoney.ui.views.payees.PayeesFragment"
        android:label="@string/payees"
        tools:layout="@layout/fragment_payees">
    </fragment>
    <fragment
        android:id="@+id/nav_transactions"
        android:name="eu.vmladenov.amymoney.ui.views.transactions.TransactionsFragment"
        android:label="@string/ledgers"
        tools:layout="@layout/fragment_transactions">
    </fragment>
</navigation>
